Production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftista-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/catalogue
        pathType: Prefix
        backend:
          service:
            name: catalogue
            port:
              number: 5000
      - path: /api/voting
        pathType: Prefix
        backend:
          service:
            name: voting
            port:
              number: 8080
      - path: /api/recommendation
        pathType: Prefix
        backend:
          service:
            name: recommendation
            port:
              number: 8000
